--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=assetmanagement
 #db-properties
-spring.datasource.url=jdbc:mysql://localhost:3306/asst_mgmt_backend_db?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=SivaG@1203
+#spring.datasource.url=jdbc:mysql://localhost:3306/asst_mgmt_backend_db?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=SivaG@1203
 
-##aws-db-properties
-#spring.datasource.url=jdbc:mysql://asset-management-db.chztqcgrpby5.us-east-1.rds.amazonaws.com:3306/asst_mgmt_backend_db?createDatabaseIfNotExist=true
-#spring.datasource.username=admin
-#spring.datasource.password=SivaG1203
+#aws-db-properties
+spring.datasource.url=jdbc:mysql://asset-management-db.chztqcgrpby5.us-east-1.rds.amazonaws.com:3306/asst_mgmt_backend_db?createDatabaseIfNotExist=true
+spring.datasource.username=admin
+spring.datasource.password=SivaG1203
 
 
 #hibernate properties
